# elhos-eline

./: .gitignore
Delphi/: eLineGr.dsk  eLineGr.groupproj  eLineGr.groupproj.local
Delphi/Dongle/: Main.dfm  Main.pas  WinUsbDev.pas  WinUsbDll.pas  eLineDongle.dpr  eLineDongle.dproj  eLineDongle.dproj.local  eLineDongle.dsk  eLineDongle.identcache  eLineDongle.res  eLineDongle.stat  l1.txt
Delphi/FmxTest/: F1  FmxTest.dpr  FmxTest.dproj  FmxTest.dproj.local  FmxTest.identcache  FmxTest.res  FmxTest.stat  Main.Surface.fmx  Main.Windows.fmx  Main.fmx  Main.pas  T1Bin
Delphi/FmxTest2/: FmxTest2.dpr  FmxTest2.dproj  FmxTest2.dproj.local  FmxTest2.identcache  FmxTest2.res  FmxTest2.stat  Main.fmx  Main.pas  T2
Delphi/KeyLoader/: InterRsd.pas  KeyLoaderCmmUnit.pas  KeyLoaderDef.pas  KeyLogItemUnit.dfm  KeyLogItemUnit.pas  Main.dfm  Main.pas  eLineKeyLoader.dpr  eLineKeyLoader.dproj  eLineKeyLoader.dproj.local  eLineKeyLoader.identcache  eLineKeyLoader.res  eLineKeyLoader.stat
Delphi/RFM69Skaner/: CrcUnit.pas  InterRsd.pas  Rfm69Main.dfm  Rfm69Main.pas  Rfm69Skaner.dpr  Rfm69Skaner.dproj  Rfm69Skaner.dproj.local  Rfm69Skaner.identcache  Rfm69Skaner.res  Rfm69Skaner.stat  Rfm69SkanerCfg.dfm  Rfm69SkanerCfg.pas  SkanerCmmUnit.pas  U_USB.pas  eLineDef.pas
Delphi/TestLib/: LibMain.dfm  LibMain.pas  TestLib.dpr  TestLib.dproj  TestLib.dproj.local  ps2000.lib  (+2 more)
Doc/: Raport na 4 maja 2021.odt
Druk/: A_TrackGr.DsnWrk
Esp32/eLineRmt2/main/: CMakeLists.txt  I2C.cpp  I2C.h  MyConfig.cpp  MyConfig.h  Shell.cpp  Shell.h  TaskClass.cpp  TaskClass.h  UMain.cpp  UMain.h  main.c
(+632 files in other folders)
